--- a/table.html
+++ b/table.html
@@ -21,8 +21,8 @@
                     <input type="text" name="empage">
                 </div>
                 <div class="form-group">
-                    <label>DATE JOINED: </label>
-                    <input type="date" name="joda">
+                    <label>ENTRY TIME: </label>
+                    <input type="time" name="joda">
                 </div>
                 <div class="but">
                     <button type="button" onclick="adddata();">ADD DATA</button>
@@ -34,7 +34,7 @@
                     <th>EMPLOYEE ID</th>
                     <th>EMPLOYEE NAME</th>
                     <th>AGE</th>
-                    <th>DATE JOINED</th>
+                    <th>ENTRY TIME</th>
                     <th>ACTION</th>
                 </tr>
             </table>
@@ -63,47 +63,14 @@
                     td3.innerHTML = empage;
                     td4.innerHTML = datejoined;
 
-                    var dropdown = document.createElement('div');
-                    dropdown.className = 'dropdown';
-
-                    var drop = document.createElement('button');
-                    drop.className = 'drop';
-                    drop.innerHTML = 'Actions';
-                    dropdown.appendChild(drop);
-
-                    var dropdownContent = document.createElement('div');
-                    dropdownContent.className = 'dropdown-content';
-
-                    var dismiss = document.createElement('a');
-                    dismiss.href = '#';
-                    dismiss.innerHTML = 'Dismiss';
-                    dropdownContent.appendChild(dismiss);
-
-                    var suspend = document.createElement('a');
-                    suspend.href = '#';
-                    suspend.innerHTML = 'Suspend';
-                    dropdownContent.appendChild(suspend);
-
-                    var decrement = document.createElement('a');
-                    decrement.href = '#';
-                    decrement.innerHTML = 'Decrement';
-                    dropdownContent.appendChild(decrement);
-
-                    var increment = document.createElement('a');
-                    increment.href = '#';
-                    increment.innerHTML = 'Increment';
-                    dropdownContent.appendChild(increment);
-
-                    var deleteOption = document.createElement('a');
-                    deleteOption.href = '#';
-                    deleteOption.innerHTML = 'Delete';
-                    deleteOption.onclick = function() {
+                    var deleteButton = document.createElement('button');
+                    deleteButton.innerHTML = 'Delete';
+                    deleteButton.className = 'delete-button';
+                    deleteButton.onclick = function() {
                         tr.remove();
                     };
-                    dropdownContent.appendChild(deleteOption);
 
-                    dropdown.appendChild(dropdownContent);
-                    td5.appendChild(dropdown);
+                    td5.appendChild(deleteButton);
 
                     tr.appendChild(td1);
                     tr.appendChild(td2);
@@ -113,10 +80,8 @@
 
                     document.getElementById("tb").appendChild(tr); 
 
-                    // Clear the alert message
                     alertMessage.innerHTML = '';
                 } else {
-                    // Display the alert message
                     alertMessage.innerHTML = '<span class="alert-text">Please fill all fields</span>';
                 }
             }
