--- a/table.html
+++ b/table.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="form-group">
                     <label>AGE: </label>
-                    <input type="text" name="empage">
+                    <input type="number" name="empage">
                 </div>
                 <div class="form-group">
                     <label>ENTRY TIME: </label>
